Decorate issues with Chrome extension (#228)
* Move issue list decoration to polarkit

* A separate API entry for the extension
